# MathAnalyzer

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/Core/: Computer.cpp  Computer.h  Diff.cpp  Diff.h  Function.cpp  Function.h  MathMatrix.cpp  MathMatrix.h  MathUtils.cpp  MathUtils.h  MathVector.cpp  MathVector.h  Parser.cpp  Parser.h  Simplifier.cpp  Simplifier.h  Utils.h
src/Nodes/: AdditionExpression.cpp  AdditionExpression.h  ArgumentSymbol.cpp  ArgumentSymbol.h  Constant.cpp  Constant.h  DifferenceExpression.cpp  DifferenceExpression.h  DivideExpression.cpp  DivideExpression.h  Expression.cpp  Expression.h  FunctionSymbol.cpp  FunctionSymbol.h  PowerExpression.cpp  PowerExpression.h  PrimitiveSymbol.h  ProductExpression.cpp  ProductExpression.h  StringConstant.cpp  StringConstant.h  Symbol.cpp  Symbol.h  SymbolFactory.cpp  SymbolFactory.h
src/Visitors/: ComputeUtils.cpp  ComputeUtils.h  ComputeVisitor.cpp  ComputeVisitor.h  DiffVisitor.cpp  DiffVisitor.h  SimplifyUtils.h  SimplifyVisitor.cpp  SimplifyVisitor.h  SymbolVisitor.cpp  SymbolVisitor.h  VisualiserVis.cpp  VisualiserVis.h
tests/: CMakeLists.txt
tests/Core/: CMakeLists.txt  diff_test.cpp  function_test.cpp  math_vector_test.cpp  parser_test.cpp  simplifier_test.cpp
tests/Nodes/: CMakeLists.txt  symbol_test.cpp
